[iOS] ChromeBrowserProvider::Initialize has been removed.
Chromium changes:

https://source.chromium.org/chromium/chromium/src/+/bed19a6f26a3546507bca8446f1b944d21ed4d7c

commit bed19a6f26a3546507bca8446f1b944d21ed4d7c
Author: Sylvain Defresne <sdefresne@chromium.org>
Date:   Fri Jan 14 12:37:34 2022 +0000

    [ios] Use the new `ui_utils` API

    As the internal repository now provides implementation for the
    `ui_utils` API, convert code to use it instead of the deprecated
    methods of ChromeBrowserProvider.

    The methods are not removed as that would break the internal
    repository (as the methods are still overridden and needs to
    be until they are no longer called from public code).

    This is part of a multi-CL change:
      - https://crrev.com/c/3381143
      - https://crrev.com/i/4447058
     => https://crrev.com/c/3383576
      - https://crrev.com/i/4451098
      - https://crrev.com/c/3380979

    Bug: 1201182

https://source.chromium.org/chromium/chromium/src/+/f3cfb8cdbf6ec32510722d7aa595a8d9cbc71c7c

commit f3cfb8cdbf6ec32510722d7aa595a8d9cbc71c7c
Author: Sylvain Defresne <sdefresne@chromium.org>
Date:   Mon Jan 17 14:25:27 2022 +0000

    [ios] Remove obsolete methods of ChromeBrowserProvider

    Remove ChromeBrowserProvider's methods that have been replaced
    by the `ui_utils` API now that the overriddes have been removed
    from the internal repository and the methods are not used.

    This is part of a multi-CL change:
      - https://crrev.com/c/3381143
      - https://crrev.com/i/4447058
      - https://crrev.com/c/3383576
      - https://crrev.com/i/4451098
     => https://crrev.com/c/3380979

    Bug: 1201182

--- a/ios/app/BUILD.gn
+++ b/ios/app/BUILD.gn
@@ -55,11 +55,13 @@ source_set("app") {
     "//ios/chrome/browser/browser_state",
     "//ios/chrome/browser/content_settings",
     "//ios/chrome/browser/history",
+    "//ios/chrome/browser/providers/ui_utils:chromium_ui_utils",
     "//ios/chrome/browser/sync",
     "//ios/chrome/browser/ui/webui:webui_internal",
     "//ios/chrome/browser/undo",
     "//ios/chrome/common",
     "//ios/public/provider/chrome/browser",
+    "//ios/public/provider/chrome/browser/ui_utils:ui_utils_api",
     "//ios/web/public/init",
     "//ios/web/public/webui",
 
