[iOS] ObjC is now used in ApplicationContext
Chromium change:

https://source.chromium.org/chromium/chromium/src/+/1a956444bee68515432ff3c75369bd1eb8319045

commit 1a956444bee68515432ff3c75369bd1eb8319045
Author: Sylvain Defresne <sdefresne@chromium.org>
Date:   Tue Jan 18 11:48:50 2022 +0000

    [ios] Allow use of ObjC in ApplicationContext

    The class ApplicationContext currently is pure C++ and thus
    cannot return Objective-C instances. Convert all C++ files
    that includes //ios/chrome/browser/application_context.h to
    Objective-C++ files (i.e. rename them from .cc to .mm, and
    add pre-processor guards to ensure that ARC is enabled).

    This will allow use of ObjC in ApplicationContext in followup
    changes.

    Bug: 1201182

--- a/ios/browser/component_updater/BUILD.gn
+++ b/ios/browser/component_updater/BUILD.gn
@@ -5,8 +5,8 @@
 
 source_set("component_updater") {
   sources = [
-    "component_updater_utils.cc",
     "component_updater_utils.h",
+    "component_updater_utils.mm",
   ]
   deps = [
     "//base",
