--- a/ios/browser/api/bookmarks/importer/BUILD.gn
+++ b/ios/browser/api/bookmarks/importer/BUILD.gn
@@ -10,16 +10,16 @@ source_set("importer") {
   configs += [ "//build/config/compiler:enable_arc" ]
 
   sources = [
+    "bookmark_html_reader.cc",
+    "bookmark_html_reader.h",
+    "bookmarks_importer.h",
+    "bookmarks_importer.mm",
     "brave_bookmarks_importer.h",
     "brave_bookmarks_importer.mm",
-    "bookmarks_importer.h",
-    "bookmarks_importer.cc",
-    "bookmark_html_reader.h",
-    "bookmark_html_reader.cc",
-    "imported_bookmark_entry.h",
-    "imported_bookmark_entry.cc",
     "favicon_reencode.h",
     "favicon_reencode.mm",
+    "imported_bookmark_entry.cc",
+    "imported_bookmark_entry.h",
   ]
 
   deps = [
@@ -31,16 +31,14 @@ source_set("importer") {
     "//components/search_engines:search_engines",
     "//components/strings:components_strings_grit",
     "//components/user_prefs:user_prefs",
+    "//ios/chrome/browser:browser",
     "//ios/chrome/browser/bookmarks",
     "//ios/chrome/browser/browser_state",
-    "//ios/chrome/browser:browser",
     "//ios/web/public/thread",
     "//net",
     "//ui/base:base",
     "//url",
   ]
 
-  frameworks = [
-    "Foundation.framework",
-  ]
+  frameworks = [ "Foundation.framework" ]
 }
