--- a/ios/browser/BUILD.gn
+++ b/ios/browser/BUILD.gn
@@ -47,3 +47,10 @@ source_set("browser") {
     "//ui/base",
   ]
 }
+
+group("chromium_src") {
+  deps = [
+    "//brave/common",
+    "//brave/extensions:common",
+  ]
+}
