--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -51,6 +51,8 @@ static_library("browser") {
     "fil_requests.h",
     "fil_response_parser.cc",
     "fil_response_parser.h",
+    "fil_tx_service.cc",
+    "fil_tx_service.h",
     "json_rpc_requests_helper.cc",
     "json_rpc_requests_helper.h",
     "json_rpc_response_parser.cc",
@@ -77,10 +79,16 @@ static_library("browser") {
     "solana_response_parser.h",
     "solana_transaction.cc",
     "solana_transaction.h",
+    "solana_tx_service.cc",
+    "solana_tx_service.h",
     "swap_response_parser.cc",
     "swap_response_parser.h",
     "swap_service.cc",
     "swap_service.h",
+    "tx_service.cc",
+    "tx_service.h",
+    "tx_service_manager.cc",
+    "tx_service_manager.h",
     "wallet_data_files_installer.cc",
     "wallet_data_files_installer.h",
   ]
