Implement TxService, TxManager, EthTxManager, SolanaTxManager, FilTxManager
- Each coin type implements TxManager base class for transaction
  management to manage transactions, such as EthTxManager, SolanaTxManager.
- TxService implements both TxService and EthTxManagerProxy mojom interface.
  TxService owns a <CoinType, TxManager> map and proxies calls to a specific
  TxManager implementation based on coin types.

--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -42,14 +42,16 @@ static_library("browser") {
     "eth_requests.h",
     "eth_response_parser.cc",
     "eth_response_parser.h",
-    "eth_tx_service.cc",
-    "eth_tx_service.h",
+    "eth_tx_manager.cc",
+    "eth_tx_manager.h",
     "eth_tx_state_manager.cc",
     "eth_tx_state_manager.h",
     "fil_requests.cc",
     "fil_requests.h",
     "fil_response_parser.cc",
     "fil_response_parser.h",
+    "fil_tx_manager.cc",
+    "fil_tx_manager.h",
     "json_rpc_requests_helper.cc",
     "json_rpc_requests_helper.h",
     "json_rpc_response_parser.cc",
@@ -76,10 +78,16 @@ static_library("browser") {
     "solana_response_parser.h",
     "solana_transaction.cc",
     "solana_transaction.h",
+    "solana_tx_manager.cc",
+    "solana_tx_manager.h",
     "swap_response_parser.cc",
     "swap_response_parser.h",
     "swap_service.cc",
     "swap_service.h",
+    "tx_manager.cc",
+    "tx_manager.h",
+    "tx_service.cc",
+    "tx_service.h",
     "wallet_data_files_installer.cc",
     "wallet_data_files_installer.h",
   ]
