Update eth_tx_service_factory to tx_service_factory and support getting both TxService and EthTxManagerProxy

--- a/browser/brave_wallet/BUILD.gn
+++ b/browser/brave_wallet/BUILD.gn
@@ -12,14 +12,14 @@ source_set("brave_wallet") {
     "brave_wallet_context_utils.h",
     "brave_wallet_service_factory.cc",
     "brave_wallet_service_factory.h",
-    "eth_tx_service_factory.cc",
-    "eth_tx_service_factory.h",
     "json_rpc_service_factory.cc",
     "json_rpc_service_factory.h",
     "keyring_service_factory.cc",
     "keyring_service_factory.h",
     "swap_service_factory.cc",
     "swap_service_factory.h",
+    "tx_service_factory.cc",
+    "tx_service_factory.h",
   ]
   deps = [
     "//brave/browser/profiles:util",
@@ -27,7 +27,6 @@ source_set("brave_wallet") {
     "//brave/components/brave_wallet/browser:constants",
     "//brave/components/brave_wallet/common",
     "//brave/components/brave_wallet/common:mojom",
-    "//brave/components/brave_wallet/factory",
     "//chrome/browser/profiles:profiles",
     "//components/keyed_service/content",
     "//components/keyed_service/core",
