--- a/ios/browser/brave_wallet/BUILD.gn
+++ b/ios/browser/brave_wallet/BUILD.gn
@@ -12,20 +12,19 @@ source_set("brave_wallet") {
     "brave_wallet_factory_wrappers.mm",
     "brave_wallet_service_factory.cc",
     "brave_wallet_service_factory.h",
-    "eth_tx_service_factory.cc",
-    "eth_tx_service_factory.h",
     "json_rpc_service_factory.cc",
     "json_rpc_service_factory.h",
     "keyring_service_factory.cc",
     "keyring_service_factory.h",
     "swap_service_factory.cc",
     "swap_service_factory.h",
+    "tx_service_factory.cc",
+    "tx_service_factory.h",
   ]
   deps = [
     "//brave/components/brave_wallet/browser",
     "//brave/components/brave_wallet/common",
     "//brave/components/brave_wallet/common:mojom",
-    "//brave/components/brave_wallet/factory",
     "//brave/ios/browser/api/brave_wallet:wallet_mojom_wrappers",
     "//brave/ios/browser/keyed_service",
     "//components/keyed_service/core",
