Decouple brave custom background and chromium's one
User uploaded image is converted and stored in user dir when user
selected custom background from our NTP customization setting.
However, if user set custom background image from chromium's
NTP(brave://new-tab-page), original image is saved and it's servced
to ours NTP and chromium's NTP.
We need to modify upstream NtpCustomBackgroundService to convert and
save. Instead of this, I decided to separate brave's custom background
from chromium's one as it's different page.

--- a/browser/ntp_background_images/BUILD.gn
+++ b/browser/ntp_background_images/BUILD.gn
@@ -9,6 +9,7 @@ assert(enable_custom_background)
 
 source_set("ntp_custom_background_images") {
   sources = [
+    "constants.h",
     "ntp_custom_background_images_service_delegate.cc",
     "ntp_custom_background_images_service_delegate.h",
     "ntp_custom_background_images_service_factory.cc",
@@ -19,6 +20,7 @@ source_set("ntp_custom_background_images") {
     "//base",
     "//brave/browser/profiles:util",
     "//brave/components/ntp_background_images/browser",
+    "//chrome/browser/profiles",
     "//chrome/common:constants",
     "//components/keyed_service/content",
     "//components/user_prefs",
