--- a/browser/sources.gni
+++ b/browser/sources.gni
@@ -150,6 +150,7 @@ brave_chrome_browser_deps = [
   "//brave/components/l10n/browser",
   "//brave/components/l10n/common",
   "//brave/components/ntp_background_images/browser",
+  "//brave/components/ntp_background_images/buildflags",
   "//brave/components/ntp_tiles",
   "//brave/components/p3a",
   "//brave/components/p3a:buildflags",
