--- a/package.json
+++ b/package.json
@@ -348,6 +348,7 @@
     "@types/react-router-dom": "^5.1.9",
     "@types/webtorrent": "^0.109.0",
     "@noble/bls12-381": "1.0.1",
+    "eth-sig-util": "3.0.1",
     "array-move": "^2.2.1",
     "bignumber.js": "^9.0.2",
     "bluebird": "^3.5.1",
