--- a/base/mac/BUILD.gn
+++ b/base/mac/BUILD.gn
@@ -1,25 +1,16 @@
-# Copyright (c) 2020 The Brave Authors. All rights reserved.
+# Copyright (c) 2022 The Brave Authors. All rights reserved.
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
-if (is_mac) {
-  import("//build/config/mac/rules.gni")
-}
-
-if (is_ios) {
-  import("//build/config/ios/rules.gni")
-  import("//ios/build/config.gni")
-}
+assert(is_apple)
 
 source_set("mac") {
   configs += [ "//build/config/compiler:enable_arc" ]
 
-  if (is_mac) {
-    sources = [
-      "conversions.h",
-    ]
+  sources = [
+    "conversions.h",
+  ]
 
-    frameworks = [ "Foundation.framework" ]
-  }
+  frameworks = [ "Foundation.framework" ]
 }
